@@ -25,6 +25,7 @@ Fixes:
  * It should be possible to send messages with non-default type and flags
  * Make contact refresh methods private in AccountsModelItem
  * Fixed a crash when items are removed from TreeNode
+ * Improved the way an AccountsModelItem is setup on startup
 
 telepathy-qt4-yell 0.1.6 (2011-06-06)
 ======================================
